--- a/AdminPortal/src/app/addsafiltersort/addsafiltersort.component.html
+++ b/AdminPortal/src/app/addsafiltersort/addsafiltersort.component.html
@@ -13,7 +13,7 @@
                   <div class="col-md-6">
                     <div class="form-group form-black label-floating is-focused">
                       <label class="control-label">Name</label>
-                      <input type="text" name="Name" [value]="Name" [ngModelOptions]="{standalone: true}"
+                      <input type="text" name="Name" [(ngModel)]="Name" [value]="Name" [ngModelOptions]="{standalone: true}"
                         [(ngModel)]="Name" class="form-control" required>
                     </div>
                   </div>
