--- a/AdminPortal/src/app/user-management/process-config/process-config.component.html
+++ b/AdminPortal/src/app/user-management/process-config/process-config.component.html
@@ -91,14 +91,7 @@
                                             <div class="col-md-12 flex-single-row">
                                                 <div class="flex-single-row-inner">
                                                     <h4>Date Time</h4>
-                                                    <!-- <label>
-                                                        Date Time:
-                                                    </label> -->
-                                                    <!-- <angular2-date-picker [(ngModel)]="date" [settings]="settings"
-                                                name="dd"></angular2-date-picker> -->
-
-                                                    <!-- <label class="control-label">Date Time:</label> -->
-                                                    <input type="datetime-local" name="SyncNowDate"
+                                                    <input type="date" name="SyncNowDate"
                                                         #SyncNowDate="ngModel" [(ngModel)]="date" class="validate"
                                                         required class="form-control custom-datepicker-mui">
 
@@ -135,15 +128,7 @@
                                             </div>
                                         </mat-tab>
                                     </mat-tab-group>
-
-
-
-
-                                   
-
                                 </div>
-
-                                
                             </form>
                         </div>
                     </div>
