--- a/AdminPortal/src/app/components/navbar/navbar.component.css
+++ b/AdminPortal/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 /* styles.css or your component's CSS file */
 .navbar {
-    background: #31322D;
+    background: #002428;
     padding: 5px 10px;
 }
 
@@ -55,10 +55,10 @@
 }
 
 .navbar a.menu-link {
-    /* background: #464741; */
+    /* background: #008B99; */
     padding: 10px;
     margin: 0 10px 0 0;
-    border: 1px solid #464741;
+    border: 1px solid #008B99;
     border-radius: 10px;
     color: #fff;
     font-weight: 500;
@@ -69,7 +69,7 @@
 }
 
 a.menu-link.active {
-    background: #464741;
+    background: #008B99;
 }
 
 .navbar .welcomtxt {
