--- a/AdminPortal/src/app/user-list/user-list.component.html
+++ b/AdminPortal/src/app/user-list/user-list.component.html
@@ -32,9 +32,9 @@
                                     <button class="btn-icon" (click)="onManageUser(user.UserID,user.MemberRefNo)">
                                         <i class="fa fa-pencil"></i>
                                     </button>
-                                    <button class="btn-icon" (click)="openDialog(user.UserID)">
+                                    <!-- <button class="btn-icon" (click)="openDialog(user.UserID)">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </button> -->
                                 </td>
                             </tr>
                         </tbody>
