--- a/AdminPortal/src/app/user-management/logo-upload/logo-upload.component.html
+++ b/AdminPortal/src/app/user-management/logo-upload/logo-upload.component.html
@@ -3,15 +3,15 @@
         <div class="row">
             <div class="custom-container">
                 <div class="custom-inner-container">
-                    <h5> Color Configuration List
-                        <small>Manage your Color Configurations</small>
+                    <h5> Logo Settings
+                        <small>Manage your Logo Configurations</small>
                     </h5>
-                    <div class="record-count-section">
+                    <!-- <div class="record-count-section">
                         <label>
                             Search:
                             <input type="text" (input)="applyFilter()" [(ngModel)]="searchText" />
                         </label>
-                    </div>
+                    </div> -->
                     <div *ngIf="filteredConfigList!=null && filteredConfigList!=undefined">
                         <table class="table table-striped table-bordered custom-table">
                             <thead>
