--- a/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
+++ b/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
@@ -4,25 +4,35 @@
       <div class="custom-container">
         <div class="custom-inner-container">
           <div class="col-md-12">
-            <h5>Dynamic Page
+            <h5>{{pageType}}
               <small>Manage your Page Content</small>
             </h5>
             <div class="card-content">
               <form #mailConfigForm="ngForm">
                 <div class="row" *ngIf="Mailtemplate!=null && Mailtemplate!=undefined">
                   <div class="col-md-12">
-                    <div class="form-group form-black label-floating"
-                      [ngClass]="{'is-empty': Mailtemplate.PageName=='','is-focused' : Mailtemplate.PageName!=''}">
-                      <label class="control-label">Page Name</label>
-                      <input type="text" name="PageName" id="PageName" #PageName="ngModel" value="Mailtemplate.PageName"
-                        [value]="Mailtemplate.PageName" [(ngModel)]="Mailtemplate.PageName" class="form-control"
-                        required>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <div class="form-group form-black label-floating">
+                          <label class="control-label"></label>
+                          <label class="form-control custom-label-url">{{companyDomainValue}}/</label>
+                        </div>
+                      </div>
+                      <div class="col-md-8">
+                        <div class="form-group form-black label-floating"
+                          [ngClass]="{'is-empty': Mailtemplate.PageName=='','is-focused' : Mailtemplate.PageName!=''}">
+                          <label class="control-label">Url<span class="custom-lbl-font-11">(Enter Your {{pageType}} Url)</span></label>
+                          <input type="text" name="PageName" id="PageName" #PageName="ngModel"
+                            value="Mailtemplate.PageName" [value]="Mailtemplate.PageName"
+                            [(ngModel)]="Mailtemplate.PageName" class="form-control" required>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="form-group form-black label-floating"
                       [ngClass]="{'is-empty': Mailtemplate.PageTitle=='','is-focused' : Mailtemplate.PageTitle!=''}">
-                      <label class="control-label">Page Title</label>
+                      <label class="control-label">Title</label>
                       <input class="validate" type="text" name="PageTitle" #PageTitle="ngModel"
                         [(ngModel)]="Mailtemplate.PageTitle" class="form-control" required>
                     </div>
@@ -30,7 +40,7 @@
                   <div class="col-md-12">
                     <div class="form-group form-black label-floating"
                       [ngClass]="{'is-empty': Mailtemplate.PageDescription=='','is-focused' : Mailtemplate.PageDescription!=''}">
-                      <label class="control-label">Page Description</label>
+                      <label class="control-label">Description</label>
                       <input class="validate" type="text" name="PageDescription" #PageDescription="ngModel"
                         [(ngModel)]="Mailtemplate.PageDescription" class="form-control" required>
                     </div>
@@ -38,7 +48,7 @@
                   <div class="col-md-12">
                     <div class="form-group form-black label-floating"
                       [ngClass]="{'is-empty': Mailtemplate.PageKeywords=='','is-focused' : Mailtemplate.PageKeywords!=''}">
-                      <label class="control-label">Page Keywords</label>
+                      <label class="control-label">{{ pageType == 'Blogs' ? 'Posted By' : 'Keywords'}}</label>
                       <input class="validate" type="text" name="PageKeywords" #PageKeywords="ngModel"
                         [(ngModel)]="Mailtemplate.PageKeywords" class="form-control" required>
                     </div>
@@ -50,22 +60,27 @@
                         [(ngModel)]="Mailtemplate.Sequence" class="form-control" required>
                     </div>
                   </div>
-                  <div class="col-md-12">
+                  <!-- <div class="col-md-12">
                     <mat-form-field>
                       <mat-label>Page Type</mat-label>
                       <mat-select [(ngModel)]="Mailtemplate.ptype" name="pageTypeOption" required>
-                        <mat-option *ngFor="let ptype of pageType" [value]="ptype.value">
+                        <mat-option *ngFor="let ptype of pageTypes" [value]="ptype.value">
                           {{ptype.key}}
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
+                  </div> -->
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group form-black label-floating">
+                        <img *ngIf="Mailtemplate.imageurl!=undefined && Mailtemplate.imageurl!=''"
+                          src="{{Mailtemplate.imageurl}}" style="height: 100px;width: 200px;">
+                      </div>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group form-black label-floating">
-                        <label class="control-label">Image</label>
-                        <img *ngIf="Mailtemplate.imageurl!=undefined && Mailtemplate.imageurl!=''"
-                          src="{{Mailtemplate.imageurl}}" style="height: 100px;width: 200px;"> <br />
                         <input type="file" style="position: relative;opacity: inherit;"
                           (change)="onFileSelected($event)">
                       </div>
