--- a/AdminPortal/src/app/app.component.html
+++ b/AdminPortal/src/app/app.component.html
@@ -6,6 +6,9 @@
       <app-sidebar></app-sidebar>
     </div>
     <div *ngIf="!isLogin('login')" class="main-panel">
+      <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+        <p style="font-size: 20px; color: white">Loading...</p>
+      </ngx-spinner>
       <router-outlet></router-outlet>
     </div>
   </div>
