--- a/AdminPortal/src/app/components/sidebar/sidebar.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.html
@@ -107,14 +107,16 @@
         <router-outlet></router-outlet>
       </div>
     </div>
-
   </mat-drawer-content>
-
-
-
-
 </mat-drawer-container>
-
+<ngx-spinner
+bdColor="rgba(51,51,51,0.8)"
+size="medium"
+color="#fff"
+type="ball-spin-clockwise-fade-rotating"
+>
+<p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 
 <!-- Copyright 2023 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
