--- a/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
+++ b/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
@@ -8,7 +8,7 @@
                         <button class="header-button" (click)="onEditconf(0)">Add New</button>
                     </h5>
                     <div class="col-md-12">
-                        <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start"
+                        <mat-tab-group #tabGroup mat-stretch-tabs="false" mat-align-tabs="start"
                             (selectedTabChange)="tabChanged($event)">
                             <mat-tab class="tab-border" label="Blogs">
                                 <div *ngIf="blogPageList != null && blogPageList != undefined"
@@ -23,22 +23,26 @@
                                     <table class="table table-striped table-bordered custom-table">
                                         <thead class="text-info">
                                             <tr>
-                                                <th>Name</th>
-                                                <th>Title </th>
-                                                <th>Page Type </th>
-                                                <th>Description </th>
-                                                <th>URL </th>
+                                                <th style="width: 10%;">Title </th>
+                                                <th style="width: 40%;">Description</th>
+                                                <th style="width: 20%;">Posted Date</th>
+                                                <th style="width: 30%;">URL</th>
                                                 <th style="text-align: center;">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr
                                                 *ngFor="let mails of blogPageList | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
-                                                <td data-title="Name">{{mails.PageName}}</td>
-                                                <td data-title="Subject">{{mails.PageTitle}}</td>
-                                                <td data-title="Subject">{{mails.ptype}}</td>
-                                                <td data-title="Subject">{{mails.PageDescription}}</td>
-                                                <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td>
+                                                <td>{{mails.PageTitle}}</td>
+                                                <td>{{mails.PageDescription}}</td>
+                                                <td>{{mails.CreatedDate | date:'dd-MM-yyyy' }}</td>
+                                                <td>
+                                                    <ng-container *ngIf="companyDomainValue">
+                                                        <a [href]="companyDomainValue + '/' +mails.ptype + '/' + mails.PageName"
+                                                            target="_blank">
+                                                            {{companyDomainValue}}/{{mails.ptype}}/{{mails.PageName}}</a>
+                                                    </ng-container>
+                                                </td>
                                                 <td class="font-20" align="center">
                                                     <button (click)="onEditconf(mails.PageID)" class="btn-icon"><i
                                                             class="fa fa-pencil"></i></button>
@@ -67,21 +71,25 @@
                                     <table class="table table-striped table-bordered custom-table">
                                         <thead>
                                             <tr>
-                                                <th>Name</th>
                                                 <th>Title </th>
-                                                <th>Page Type </th>
                                                 <th>Description </th>
                                                 <th>URL </th>
                                                 <th style="text-align: center;">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr *ngFor="let mails of infoPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
-                                                <td data-title="Name">{{mails.PageName}}</td>
+                                            <tr
+                                                *ngFor="let mails of infoPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
-                                                <td data-title="Subject">{{mails.ptype}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
-                                                <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td>
+                                                <td>
+                                                    <ng-container *ngIf="companyDomainValue">
+                                                        <a [href]="companyDomainValue + '/' +mails.ptype + '/' + mails.PageName"
+                                                            target="_blank">
+                                                            {{companyDomainValue}}/{{mails.ptype}}/{{mails.PageName}}</a>
+                                                    </ng-container>
+                                                </td>
+                                                <!-- <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td> -->
                                                 <td class="font-20" align="center">
                                                     <button (click)="onEditconf(mails.PageID)" class="btn-icon"><i
                                                             class="fa fa-pencil"></i></button>
@@ -109,21 +117,25 @@
                                     <table class="table table-striped table-bordered custom-table">
                                         <thead>
                                             <tr>
-                                                <th>Name</th>
                                                 <th>Title </th>
-                                                <th>Page Type </th>
                                                 <th>Description </th>
                                                 <th>URL </th>
                                                 <th style="text-align: center;">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr *ngFor="let mails of ourlinesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
-                                                <td data-title="Name">{{mails.PageName}}</td>
+                                            <tr
+                                                *ngFor="let mails of ourlinesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
-                                                <td data-title="Subject">{{mails.ptype}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
-                                                <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td>
+                                                <td>
+                                                    <ng-container *ngIf="companyDomainValue">
+                                                        <a [href]="companyDomainValue + '/' +mails.ptype + '/' + mails.PageName"
+                                                            target="_blank">
+                                                            {{companyDomainValue}}/{{mails.ptype}}/{{mails.PageName}}</a>
+                                                    </ng-container>
+                                                </td>
+                                                <!-- <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td> -->
                                                 <td class="font-20" align="center">
                                                     <button (click)="onEditconf(mails.PageID)" class="btn-icon"><i
                                                             class="fa fa-pencil"></i></button>
@@ -151,21 +163,25 @@
                                     <table class="table table-striped table-bordered custom-table">
                                         <thead>
                                             <tr>
-                                                <th>Name</th>
                                                 <th>Title </th>
-                                                <th>Page Type </th>
                                                 <th>Description </th>
                                                 <th>URL </th>
                                                 <th style="text-align: center;">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr *ngFor="let mails of servicesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
-                                                <td data-title="Name">{{mails.PageName}}</td>
+                                            <tr
+                                                *ngFor="let mails of servicesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
-                                                <td data-title="Subject">{{mails.ptype}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
-                                                <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td>
+                                                <td>
+                                                    <ng-container *ngIf="companyDomainValue">
+                                                        <a [href]="companyDomainValue + '/' +mails.ptype + '/' + mails.PageName"
+                                                            target="_blank">
+                                                            {{companyDomainValue}}/{{mails.ptype}}/{{mails.PageName}}</a>
+                                                    </ng-container>
+                                                </td>
+                                                <!-- <td data-title="Subject">/{{mails.ptype}}/{{mails.PageName}}</td> -->
                                                 <td class="font-20" align="center">
                                                     <button (click)="onEditconf(mails.PageID)" class="btn-icon"><i
                                                             class="fa fa-pencil"></i></button>
