search persist changes

--- a/AdminPortal/src/app/components/sidebar/sidebar.component.css
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.css
@@ -22,7 +22,10 @@
     justify-content: start;
     background: #fff;
 }
-
+.mat-drawer-content-no-scroll {
+    height: 100%;
+    overflow-y: hidden;
+}
 .sidebar-container {
     display: flex;
     flex-direction: column;
