--- a/AdminPortal/src/app/components/sidebar/sidebar.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.html
@@ -94,7 +94,7 @@
       </ul>
     </div>
   </mat-drawer>
-  <mat-drawer-content>
+  <mat-drawer-content class="mat-drawer-content-no-scroll">
 
     <div class="example-sidenav-content">
       <button type="button" [disabled]="isDrawerDisabled" mat-button (click)="drawer.toggle()">
