--- a/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
+++ b/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
@@ -15,7 +15,7 @@
                       <div class="col-md-4">
                         <div class="form-group form-black label-floating">
                           <label class="control-label"></label>
-                          <label class="form-control custom-label-url">{{companyDomainValue}}/</label>
+                          <label class="form-control custom-label-url">{{companyDomainValue}}/{{pageType | lowercase}}/</label>
                         </div>
                       </div>
                       <div class="col-md-8">
@@ -60,16 +60,6 @@
                         [(ngModel)]="Mailtemplate.Sequence" class="form-control" required>
                     </div>
                   </div>
-                  <!-- <div class="col-md-12">
-                    <mat-form-field>
-                      <mat-label>Page Type</mat-label>
-                      <mat-select [(ngModel)]="Mailtemplate.ptype" name="pageTypeOption" required>
-                        <mat-option *ngFor="let ptype of pageTypes" [value]="ptype.value">
-                          {{ptype.key}}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                  </div> -->
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group form-black label-floating">
