--- a/AdminPortal/src/app/login/login.component.css
+++ b/AdminPortal/src/app/login/login.component.css
@@ -39,3 +39,8 @@ label {
     padding: 10px 0;
     margin: 30px 0 0 0;
 }
+.login-err-msg{
+    color: red;
+    font-size: 12px;
+    font-weight: 400;
+}
