--- a/AdminPortal/src/app/productdetails/productlist.component.html
+++ b/AdminPortal/src/app/productdetails/productlist.component.html
@@ -6,42 +6,65 @@
                     <h5> Product List
                         <small>Manage your Products</small>
                     </h5>
-                    <div class="record-count-section">
+                    <div class="record-count-section" style="justify-content: start; gap: 10%; align-items: center;">
                         <label>
-                            Search: 
-                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText"/>
+                            Search:
+                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText" />
+                            <button class="refresh-btn" (click)="onReset()"><i class="fa fa-refresh refresh-icon-clr" aria-hidden="true"></i></button>
                         </label>
+                        <div>
+                            <label [ngClass]="filterActive == -1 ?  'badge active' : 'badge'"
+                                (click)="onFilterActiveChange(-1)"> All</label>
+                            <label [ngClass]="filterActive == 0 ?  'badge  active' : 'badge'"
+                                (click)="onFilterActiveChange(0)"> Active</label>
+                            <label [ngClass]="filterActive == 1 ?  'badge active' : 'badge'"
+                                (click)="onFilterActiveChange(1)"> Deactive</label>
+                        </div>
                     </div>
+                    <!-- {{this.selectedIds | json}} -->
+                    <div class="actions-section hidden" [ngClass]="selectedIds.length > 0 ?  'open' : ''">
+                        <button class="btn-success" (click)="OnApplyActiveDeactive(false)"><i
+                                class="fa-regular fa-circle-check fa-lg"></i>Apply Activate</button>
+                        <button class="btn-fail" (click)="OnApplyActiveDeactive(true)"><i
+                                class="fa-regular fa-circle-xmark fa-lg"></i> Apply De-activate</button>
+                    </div>
+
                     <div *ngIf="filteredProductlist != null && filteredProductlist != undefined">
                         <table class="table table-striped table-bordered custom-table">
                             <thead>
                                 <tr>
-                                    <!-- <th>
-                                        <input type="checkbox" (change)="selectAllCheckbox()">
-                                    </th> -->
+                                    <th>
+                                        <input #checkAll type="checkbox" (change)="selectAllCheckbox($event)">
+                                    </th>
                                     <th>Product Name</th>
                                     <th>Status</th>
                                     <th style="text-align: center;">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody
+                                *ngIf="filteredProductlist != null && filteredProductlist != undefined && filteredProductlist.length > 0">
                                 <tr
-                                    *ngFor="let product of filteredProductlist | paginate : { itemsPerPage:15, currentPage:page,totalItems:totalPage, id:'first' }">
-                                    <!-- <td>
-                                        <input type="checkbox" [(ngModel)]="product.discontinued" (change)="selectItem(product.item1)">
-                                    </td> -->
+                                    *ngFor="let product of filteredProductlist | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalPage, id:'first' }">
+                                    <td>
+                                        <input type="checkbox" [checked]="selectedIds.indexOf(product.item1)!==-1"
+                                            (change)="updateSelectedIds(product.item1)">
+                                    </td>
                                     <td>{{product.item1}}</td>
                                     <td>{{product.discontinued == 0 ? "Active" :
                                         "Deactive"}}</td>
                                     <td class="font-20" align="center">
-                                        <button (click)="onEditconf(product.item1)"
-                                            class="btn-icon"> <i class="fa fa-pencil"></i></button>
+                                        <button (click)="onEditconf(product.item1)" class="btn-icon"> <i
+                                                class="fa fa-pencil"></i></button>
                                     </td>
                                 </tr>
                             </tbody>
+                            <div *ngIf="filteredProductlist.length === 0" class="no-records">
+                                No records found.
+                            </div>
                         </table>
-                        <div style="text-align:center">
-                            <pagination-controls (pageChange)="page = getProductList($event)" id="first">
+                        <div *ngIf="filteredProductlist != null && filteredProductlist != undefined && filteredProductlist.length > 0"
+                            style="text-align:center">
+                            <pagination-controls (pageChange)="pageChanged($event)" id="first">
                             </pagination-controls>
                         </div>
                     </div>
