--- a/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
+++ b/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
@@ -18,6 +18,9 @@
                                             Search:
                                             <input type="text" (input)="applyFilter('blogs')"
                                                 [(ngModel)]="searchPageNameQuery" />
+                                            <button class="refresh-btn" (click)="onReset('blogs')"><i
+                                                    class="fa fa-refresh refresh-icon-clr"
+                                                    aria-hidden="true"></i></button>
                                         </label>
                                     </div>
                                     <table class="table table-striped table-bordered custom-table">
@@ -66,6 +69,9 @@
                                             Search:
                                             <input type="text" (input)="applyFilter('info')"
                                                 [(ngModel)]="searchPageNameQuery" />
+                                            <button class="refresh-btn" (click)="onReset('info')"><i
+                                                    class="fa fa-refresh refresh-icon-clr"
+                                                    aria-hidden="true"></i></button>
                                         </label>
                                     </div>
                                     <table class="table table-striped table-bordered custom-table">
@@ -112,6 +118,9 @@
                                             Search:
                                             <input type="text" (input)="applyFilter('our-lines')"
                                                 [(ngModel)]="searchPageNameQuery" />
+                                            <button class="refresh-btn" (click)="onReset('our-lines')"><i
+                                                    class="fa fa-refresh refresh-icon-clr"
+                                                    aria-hidden="true"></i></button>
                                         </label>
                                     </div>
                                     <table class="table table-striped table-bordered custom-table">
@@ -158,6 +167,9 @@
                                             Search:
                                             <input type="text" (input)="applyFilter('services')"
                                                 [(ngModel)]="searchPageNameQuery" />
+                                            <button class="refresh-btn" (click)="onReset('services')"><i
+                                                    class="fa fa-refresh refresh-icon-clr"
+                                                    aria-hidden="true"></i></button>
                                         </label>
                                     </div>
                                     <table class="table table-striped table-bordered custom-table">
