--- a/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
+++ b/AdminPortal/src/app/adddynamicpage/adddynamicpage.component.html
@@ -15,13 +15,15 @@
                       <div class="col-md-4">
                         <div class="form-group form-black label-floating">
                           <label class="control-label"></label>
-                          <label class="form-control custom-label-url">{{companyDomainValue}}/{{pageType | lowercase}}/</label>
+                          <label class="form-control custom-label-url">{{companyDomainValue}}/{{pageType |
+                            lowercase}}/</label>
                         </div>
                       </div>
                       <div class="col-md-8">
                         <div class="form-group form-black label-floating"
                           [ngClass]="{'is-empty': Mailtemplate.PageName=='','is-focused' : Mailtemplate.PageName!=''}">
-                          <label class="control-label">Url<span class="custom-lbl-font-11">(Enter Your {{pageType}} Url)</span></label>
+                          <label class="control-label">Url<span class="custom-lbl-font-11">(Enter Your {{pageType}}
+                              Url)</span></label>
                           <input type="text" name="PageName" id="PageName" #PageName="ngModel"
                             value="Mailtemplate.PageName" [value]="Mailtemplate.PageName"
                             [(ngModel)]="Mailtemplate.PageName" class="form-control" required>
@@ -30,34 +32,45 @@
                     </div>
                   </div>
                   <div class="col-md-12">
-                    <div class="form-group form-black label-floating"
-                      [ngClass]="{'is-empty': Mailtemplate.PageTitle=='','is-focused' : Mailtemplate.PageTitle!=''}">
-                      <label class="control-label">Title</label>
-                      <input class="validate" type="text" name="PageTitle" #PageTitle="ngModel"
-                        [(ngModel)]="Mailtemplate.PageTitle" class="form-control" required>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group form-black label-floating"
+                          [ngClass]="{'is-empty': Mailtemplate.PageTitle=='','is-focused' : Mailtemplate.PageTitle!=''}">
+                          <label class="control-label">Title</label>
+                          <input class="validate" type="text" name="PageTitle" #PageTitle="ngModel"
+                            [(ngModel)]="Mailtemplate.PageTitle" class="form-control" required>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group form-black label-floating"
+                          [ngClass]="{'is-empty': Mailtemplate.PageDescription=='','is-focused' : Mailtemplate.PageDescription!=''}">
+                          <label class="control-label">Description</label>
+                          <input class="validate" type="text" name="PageDescription" #PageDescription="ngModel"
+                            [(ngModel)]="Mailtemplate.PageDescription" class="form-control" required>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-12">
-                    <div class="form-group form-black label-floating"
-                      [ngClass]="{'is-empty': Mailtemplate.PageDescription=='','is-focused' : Mailtemplate.PageDescription!=''}">
-                      <label class="control-label">Description</label>
-                      <input class="validate" type="text" name="PageDescription" #PageDescription="ngModel"
-                        [(ngModel)]="Mailtemplate.PageDescription" class="form-control" required>
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div class="form-group form-black label-floating"
+                        [ngClass]="{'is-empty': Mailtemplate.PageKeywords=='','is-focused' : Mailtemplate.PageKeywords!=''}">
+                        <label class="control-label">{{ pageType == 'Blogs' ? 'Posted By' : 'Keywords'}}</label>
+                        <input class="validate" type="text" name="PageKeywords" #PageKeywords="ngModel"
+                          [(ngModel)]="Mailtemplate.PageKeywords" class="form-control" required>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group form-black label-floating"
-                      [ngClass]="{'is-empty': Mailtemplate.PageKeywords=='','is-focused' : Mailtemplate.PageKeywords!=''}">
-                      <label class="control-label">{{ pageType == 'Blogs' ? 'Posted By' : 'Keywords'}}</label>
-                      <input class="validate" type="text" name="PageKeywords" #PageKeywords="ngModel"
-                        [(ngModel)]="Mailtemplate.PageKeywords" class="form-control" required>
+                    <div class="col-md-4">
+                      <div class="form-group form-black label-floating">
+                        <label class="control-label">Sequence</label>
+                        <input class="validate" type="text" name="Sequence" #Sequence="ngModel"
+                          [(ngModel)]="Mailtemplate.Sequence" class="form-control" required>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group form-black label-floating">
-                      <label class="control-label">Sequence</label>
-                      <input class="validate" type="text" name="Sequence" #Sequence="ngModel"
-                        [(ngModel)]="Mailtemplate.Sequence" class="form-control" required>
+                    <div class="col-md-4">
+                      <div class="form-group form-black label-floating" style="margin:17px">
+                        <mat-checkbox [(ngModel)]="Mailtemplate.IsActive" name="IsActive">Active</mat-checkbox>
+                      </div>
                     </div>
                   </div>
                   <div class="row">
@@ -76,6 +89,12 @@
                       </div>
                     </div>
                   </div>
+                  <!-- <div class="col-md-12">
+                    <div class="form-group form-black label-floating">
+                      <label class="control-label">Page Content Editor</label>
+                      <froala-editor [(ngModel)]="Mailtemplate.PageContent"></froala-editor>
+                    </div>
+                  </div> -->
                   <div class="col-md-12">
                     <div class="form-group form-black label-floating"
                       [ngClass]="{'is-empty': Mailtemplate.PageContent=='','is-focused' : Mailtemplate.PageContent!=''}">
@@ -87,7 +106,6 @@
                   <div class="col-md-12">
                     <div class="form-group form-black label-floating">
                       <label class="control-label">Page Preview</label>
-                      <!-- <div style="margin-top:10px;" *ngIf="Mailtemplate.MailTemplateContent!=null && Mailtemplate.MailTemplateContent!=undefined  && Mailtemplate.MailTemplateContent!='undefined'" [innerHTML]="Mailtemplate.MailTemplateContent"></div> -->
                       <div style="margin-top:10px;"
                         *ngIf=" Mailtemplate.PageContent!='' && Mailtemplate.PageContent!=null && Mailtemplate.PageContent!=undefined  && Mailtemplate.PageContent!='undefined'"
                         [innerHTML]="transform(Mailtemplate.PageContent,'html')" class="list-d"></div>
