changes from distone to brpdevelopement

--- a/AdminPortal/src/app/components/navbar/navbar.component.html
+++ b/AdminPortal/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="nav-custom-section">
         <div class="logo">
-            <a href="http://distone.com" target="_blank" class="simple-text logo-section">
+            <a href="https://admin.brpdevelopment.com" target="_blank" class="simple-text logo-section">
                 <div class="logo-img">
                     <img src="assets/img/BRP-Logo-White.png" />
                 </div>
