--- a/AdminPortal/src/app/components/sidebar/sidebar1.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar1.component.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <a href="http://distone.com" target="_blank" class="simple-text">
+    <a href="https://admin.brpdevelopment.com" target="_blank" class="simple-text">
         <div class="logo-img">
             <img src="assets/img/BRP-Logo-White.png" />
         </div>
