dynamic page issue resolve

--- a/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
+++ b/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
@@ -165,7 +165,7 @@
                                     </div>
                                 </div>
                             </mat-tab>
-                            <mat-tab class="tab-border" label="Servies">
+                            <mat-tab class="tab-border" label="services">
                                 <div *ngIf="currentTab > -1 && currentTab == 3 && servicesPageList != null && servicesPageList != undefined">
                                     <div class="record-count-section">
                                         <label>
